--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "flag-icon-css": "^4.1.7",
+    "flag-icons": "^6.6.6",
     "sass": "^1.58.3",
     "vue": "^3.2.45"
   },
