--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@popperjs/core": "^2.11.6",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "flag-icon-css": "^4.1.7",
     "flag-icons": "^6.6.6",
-    "sass": "^1.58.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "sass": "^1.58.3",
     "vite": "^4.1.0"
   }
 }
